[gd_scene load_steps=2 format=3 uid="uid://b0mpsuta0e7fo"]

[ext_resource type="Script" path="res://addons/nt_goap/nt_goap_environment_add.gd" id="1_rtxgw"]

[node name="NT_GOAP_Environment_Add" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_rtxgw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "添加环境状态"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "环境状态名"
alignment = 1

[node name="Option" type="OptionButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Bool"
popup/item_1/text = "Int"
popup/item_1/id = 2
popup/item_2/text = "Vec2"
popup/item_2/id = 1

[node name="Tab" type="TabContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="BoolValue" type="CheckButton" parent="PanelContainer/VBoxContainer/Tab"]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 0

[node name="NumValue" type="SpinBox" parent="PanelContainer/VBoxContainer/Tab"]
unique_name_in_owner = true
visible = false
layout_mode = 2
rounded = true
allow_greater = true
allow_lesser = true
metadata/_tab_index = 1

[node name="Vec2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Tab"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="XValue" type="SpinBox" parent="PanelContainer/VBoxContainer/Tab/Vec2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
rounded = true
allow_greater = true
allow_lesser = true
prefix = "X:"

[node name="YValue" type="SpinBox" parent="PanelContainer/VBoxContainer/Tab/Vec2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
rounded = true
allow_greater = true
allow_lesser = true
prefix = "Y:"

[node name="Add" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "添加"

[connection signal="item_selected" from="PanelContainer/VBoxContainer/Option" to="." method="_on_option_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Add" to="." method="_on_add_pressed"]
